Jupyter notebook import change

--- a/examples/ffmpeg.ipynb
+++ b/examples/ffmpeg.ipynb
@@ -6,8 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import zprp_ffmpeg\n",
-    "import zprp_ffmpeg.FilterGraph\n",
+    "import zprp_ffmpeg2\n",
+    "import zprp_ffmpeg2.FilterGraph\n",
     "import ipywidgets as widgets\n",
     "from IPython.display import display"
    ]
